--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 }
 
 .products {
-  background-color: #673AB7;
+  background-color: #8069a5;
   padding: 20px;
   margin-bottom: 50px;
   margin: 20px auto;
@@ -48,4 +48,16 @@ html {
 
 #addCart:hover {
   background-color: #C2185B;
+}
+header {
+  background-color: black;
+  height: 50px;
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 35px;
+  text-align: center;
+
+}
+body {
+  margin: 0;
 }
